# YiCeNet

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  MANIFESTO.md  README.md  SOUL-template.md  api.py  dashboard.py  deploy_design.md  pyproject.toml  requirements.txt  yicenet_architecture.md  yicenet_deployment.md  yicenet_work_plan.md
.github/workflows/: ci.yml
checkpoints/: registry.json  v14_v15_metrics.json  world_model_best.pt  world_model_v15.pt
data/: qwen_to_yicenet.json
docs/: ARCHITECTURE.md
scripts/: bootstrap.py  checkpoint_manager.py  demo.py  ds_evaluate.py  ds_train.py  eval_api.py  export_onnx.py  flywheel_cron.sh  predict_bridge.py  publish_release.sh  register_hermes_cron.py  rl_train.py  run_experiments.sh  train_pipeline.sh  training_worker.py
scripts/install/: __init__.py  install-yicenet-hooks.sh  plugin.yaml
src/: __init__.py  config.py  encoder.py  flywheel.py  hermes_tool.py  hexagram.py  metrics.py  model.py  probes.py  rl_train.py  tokenizer.py  train.py  train_value_net.py  value_net.py  world_model.py  yicenet_engine.py
src/data/: dataset.py
src/yicenet/: __init__.py  bootstrap.py  config.py  constants.py  decoder.py  display.py  encoder.py  external_metrics.py  flywheel.py  hermes_tool.py  interfaces.py  model.py  rl_train.py  tokenizer.py  train.py  train_value_net.py  world_model.py  yicenet_engine.py
src/yicenet/data/: dataset.py
tests/: test_extended.py  test_model.py
